Add jspecify annotations to shared
(cherry picked from commit bd3c63d90c7a93094f8b4072b868416ddcf3425a)