@@ -1,6 +1,7 @@
 package com.faforever.neroxis.mask;
 
 import com.faforever.neroxis.map.SymmetrySettings;
+import org.jspecify.annotations.Nullable;
 
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.random.RandomGenerator;
@@ -12,12 +13,12 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
 
     private final AtomicInteger toBooleanCounter = new AtomicInteger();
 
-    protected ComparableMask(int size, RandomGenerator.SplittableGenerator random, SymmetrySettings symmetrySettings,
+    protected ComparableMask(int size, RandomGenerator.@Nullable SplittableGenerator random, SymmetrySettings symmetrySettings,
                              String name) {
         super(size, random, symmetrySettings, name);
     }
 
-    protected ComparableMask(U other, String name) {
+    protected ComparableMask(U other, @Nullable String name) {
         super(other, name);
     }
 
@@ -107,7 +108,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U max(U other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            U source = (U) dependencies.get(0);
+            U source = (U) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 T otherVal = source.get(x, y);
@@ -126,7 +127,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U clampMax(BooleanMask other, T val) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 return source.getPrimitive(x, y) ? (thisVal.compareTo(val) < 0 ? val : thisVal) : thisVal;
@@ -157,7 +158,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U min(U other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            U source = (U) dependencies.get(0);
+            U source = (U) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 T otherVal = source.get(x, y);
@@ -176,7 +177,7 @@ public abstract sealed class ComparableMask<T extends Comparable<T>, U extends C
     public U clampMin(BooleanMask other, T val) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             set((x, y) -> {
                 T thisVal = get(x, y);
                 return source.getPrimitive(x, y) ? (thisVal.compareTo(val) > 0 ? val : thisVal) : thisVal;
